# seqware

./: .gitignore  .travis.yml  README  README.md  build.xml  checkstyle.xml  findbugs-exclude.xml  id_seqware-jenkins-docker.enc  index.html  pom.xml  release_hotfix_branch.sh  release_unstable_release_branch.sh  seqware  seqware-eclipse-code-style.xml  seqware_jenkins.id_rsa.enc  start_stable_release_branch.sh  start_unstable_release_branch.sh  style.css
.travis/: settings
0.11.4/metadata/: index.html
0.11.4/pipeline/: index.html
css/: reset.css
prototypes/binary_alignment_file_format/: LICENSE  Makefile.am  ReadsIndex.h
scripts/: batchTransition.py
scripts/deciders/: abstractDeciderImpl.py  basicDeciderImpl.py  deciderFramework.py
seqware-admin-client/: pom.xml
seqware-admin-common/: pom.xml
seqware-admin-webservice/: LICENSE  README.md  customlogging.properties  nb-configuration.xml  pom.xml
seqware-archetype-ftl-workflow/: pom.xml
seqware-archetype-java-workflow/: pom.xml
seqware-archetype-module/: pom.xml
seqware-archetype-workflow/: pom.xml
seqware-archetype-workflowV2/: pom.xml
seqware-archetypes/: run_integration_test.pl
seqware-archetypes/seqware-archetype-decider/: pom.xml
seqware-archetypes/seqware-archetype-java-workflow/: pom.xml
seqware-archetypes/seqware-archetype-legacy-ftl-workflow/: pom.xml
seqware-archetypes/seqware-archetype-module/: pom.xml
seqware-archetypes/seqware-archetype-simple-legacy-ftl-workflow/: README.md  pom.xml
seqware-archetypes/seqware-archetype-simple-workflow/: pom.xml
seqware-archetypes/seqware-archetype-simplified-ftl-workflow/: pom.xml
seqware-archetypes/seqware-archetype-workflow/: pom.xml
seqware-common/: dao-test.log.1  database.properties  hibernate.properties  pom.xml
seqware-distribution/: QueryTutorial.java  TutorialQuery.java  pom.xml
seqware-distribution/docs/: README  README.md
seqware-ext-admin-testing/: pom.xml
seqware-ext-testing/: pom.xml
seqware-meta-db/: 0.10.0_to_0.10.1.sql  0.10.1_to_0.10.2.sql  0.10.2_to_0.11.2.sql  0.11.2_to_0.11.3.sql  0.12.0_to_0.12.1.sql  0.12.1_to_0.12.3.sql  0.12.3_to_0.12.4.sql  0.12.4_to_0.13.0.sql  0.13.0_to_0.13.6.sql  0.13.6.x_to_1.0.1.sql  0.13.6_to_0.13.6.8.sql  0.7.5_to_0.8.0.sql  0.8.0_to_0.9.0.sql  0.9.0_to_0.9.1.sql  0.9.1_to_0.10.0.sql  1.0.1_to_1.0.2.sql  1.0.1_to_1.0.3.sql  1.0.2_to_1.0.3.sql  1.0.4_to_1.0.5.sql  1.0.x_to_1.1.0.sql  1.0.x_to_1.2.sql  CHANGES  README  README.md  comments_on_tables.sql  pom.xml  purge_and_repopulate_report_tables.sh  reset_test_database.sh  seqware_meta_db.sql  seqware_meta_db_data.sql  seqware_meta_db_testdata.sql
seqware-meta-db/cleanup_scripts/: README.md  cleanup_orphan_processing.sql  cleanup_orphan_workflows.sql  identify_orphan_processing.sql  identify_orphan_workflows.sql
seqware-metadb/: TODO  pom.xml
seqware-pipeline/: README.md  pom.xml
seqware-portal/: README.md  authentication.properties  database.properties  hibernate.properties  pom.xml  upload.properties
seqware-queryengine/: JBrowseNCListFeatureWriter.java  README.md  pom.xml
seqware-queryengine-legacy/: CHANGES  Makefile  README.md  build.xml  pom.xml
seqware-queryengine-legacy/prototypes/binary_alignment_file_format/: AUTHORS  COPYING  ChangeLog  Definitions.h  INSTALL  ReadsIndex.c  configure.ac  raw_reads.c
seqware-queryengine-legacy/prototypes/binary_alignment_file_format/slo_test/: 1000.slo  1001.slo  500.slo  little.slo  mid.slo
seqware-sanity-check/: README.md  pom.xml
seqware-vagrant/: README  README.md  Vagrantfile  launch_instance.pl  settings  status.cron  vagrant_launch.conf.template  vagrant_launch.pl
seqware-webservice/: README  README.md  TODO  build.xml  database.properties  nb-configuration.xml  pom.xml  tests.sql  tomcat-context.xml
seqware-webservice-dto/: pom.xml
webservice-api/: index.html
(+6054 files in other folders)
